tests/fixtures/errors/required_index_standalone.gcl
index Phase;

param cost: Dimensionless[Phase];
